--- a/CTS_RoleAdmin/Views/Home/Index.cshtml
+++ b/CTS_RoleAdmin/Views/Home/Index.cshtml
@@ -25,10 +25,14 @@
                 <div class="col-md-6">
                     <a href='@Url.Action("MiRoleList")'><i></i>Управление ролями ручного ввода</a>
                 </div>
-            </div>
-            <div class="row mines">
                 <div class="col-md-6">
                     <a href='@Url.Action("LocationsRoleList")'><i></i>Управлению ролями местонахождений</a>
+                </div>
+                <div class="col-md-6">
+                    <a href='@Url.Action("AnalyticRoleList")'><i></i>Управлению ролями аналитики</a>
+                </div>
+                <div class="col-md-6">
+                    <a href='@Url.Action("RoleAdminRoleList")'><i></i>Управление администрацией ролей</a>
                 </div>
             </div>
         </div>
