--- a/CTS_RoleAdmin/Views/Home/Index.cshtml
+++ b/CTS_RoleAdmin/Views/Home/Index.cshtml
@@ -32,6 +32,9 @@
                     <a href='@Url.Action("AnalyticRoleList")'><i></i>Управлению ролями аналитики</a>
                 </div>
                 <div class="col-md-6">
+                    <a href='@Url.Action("RepoertsRoleList")'><i></i>Управления ролями отчетов</a>
+                </div>
+                <div class="col-md-6">
                     <a href='@Url.Action("RoleAdminRoleList")'><i></i>Управление администрацией ролей</a>
                 </div>
             </div>
