--- a/CTS_Analytics/Content/Mnemo/style/responsive.css
+++ b/CTS_Analytics/Content/Mnemo/style/responsive.css
@@ -19,7 +19,7 @@ body,html{min-width:100%}
 }
 .sidebar .menu a {
 	float:left;
-	width:20%;
+	width:16%;
 	text-align:center;
 	height:73px;
 }
@@ -57,6 +57,10 @@ body,html{min-width:100%}
 }
 .sidebar .menu a i.icon_5 {
 	background:url(../images/icon_search-mini.png) no-repeat;
+}
+
+.sidebar .menu a i.icon_6 {
+	background:url(../images/icon_incident_mini.png) no-repeat;
 }
 
 .header {
@@ -336,7 +340,53 @@ body,html{min-width:100%}
 .topmenu .txt > div {
 	margin-bottom:5px;
 }
+
+.sidebar .menu .leftmenu > li > .submenu {
+	top:87px;
+	left:0;
+	width:100%;
+}
+
+.sidebar .menu .leftmenu > li > .submenu > li > a {
+	width:100%;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 {
+	top:87px;
+	left:0;
+	width:100%;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li > a {
+	width:100%;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li > .submenu-lvl2 {
+	top:110px;
+	left:0;
+	width:100%;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li > .submenu-lvl2 > li > a {
+	width:100%;
+}
+
+#home {
+	position:relative;
+	margin-left:0;
+	padding-left:15px;
+}
+
+.welcome {
+	width:100%;
+	left:0;
+	margin-bottom:30px;
+}
+
+.welcome .txt {
+	padding:30px;
 	
+}
 
 }
 
