--- a/CTS_Analytics/Content/Mnemo/style/style.css
+++ b/CTS_Analytics/Content/Mnemo/style/style.css
@@ -52,35 +52,153 @@ body {
 	
 }
 
-.sidebar .menu a {
+.sidebar .menu .leftmenu > li > a {
 	display:block;
 	height:87px;
 	position:relative;
 }
 
-.sidebar .menu a i {
+.sidebar .menu .leftmenu > li > a > i {
 	position:absolute;
 	top:16px;
 	left:42px;
 }
 
-.sidebar .menu a i.icon {
+.sidebar .menu .leftmenu > li > a > i.icon {
 	width:55px;
 	height:55px;
 }
 
-.sidebar .menu a span {
+.sidebar .menu .leftmenu > li > a > span {
 	text-indent:-9999px;
 	display:block;
 }
 
-.sidebar .menu a:hover {
+.sidebar .menu .leftmenu > li:hover {
 	background:rgba(255,255,255,0.1);
+	border-right:4px solid #FF3700;
 }
 
-.sidebar .menu a.active {
+.sidebar .menu .leftmenu > li.active {
 	background:rgba(255,255,255,0.2);
 	border-right:4px solid #FF3700;
+}
+
+.sidebar .menu .leftmenu > li {
+	
+}
+.sidebar .menu .leftmenu > li > .submenu {
+	display:none;
+	position:absolute;
+	top:89px;
+	left:140px;
+	background:#484848;
+	min-width:220px;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 {
+	display:none;
+	position:absolute;
+	top:89px;
+	left:140px;
+	background:#484848;
+	min-width:220px;
+	height:900px;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li > .submenu-lvl2 {
+	display:none;
+	position:absolute;
+	top:0px;
+	left:220px;
+	background:#484848;
+	min-width:220px;
+	
+}
+
+.sidebar .menu .leftmenu > li:hover > .submenu {
+	display:block;
+}
+
+.sidebar .menu .leftmenu > li:hover > .submenu-lvl1 {
+	display:block;
+}
+
+.sidebar .menu .leftmenu > li:hover > .submenu-lvl1 > li:hover > .submenu-lvl2 {
+	display:block;
+}
+
+.sidebar .menu .leftmenu > li > .submenu > li {
+	
+	
+}
+
+.sidebar .menu .leftmenu > li > .submenu > li > a {
+	text-transform:uppercase;
+	color:#fff;
+	font-size:14px;
+	text-transform:uppercase;
+	padding:12.2px 20px;
+	display:block;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li > a {
+	text-transform:uppercase;
+	color:#fff;
+	font-size:14px;
+	text-transform:uppercase;
+	padding:12.2px 20px;
+	display:block;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li > .submenu-lvl2 > li > a {
+	text-transform:uppercase;
+	color:#fff;
+	font-size:14px;
+	text-transform:uppercase;
+	padding:7px 20px;
+	display:block;
+}
+
+.sidebar .menu .leftmenu > li > .submenu > li:hover {
+	background:#595959;
+	border-right:2px solid #FF3700;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li:hover > .submenu-lvl2 > li:hover{
+	background:#595959;
+	border-right:2px solid #FF3700;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li:hover {
+	background:#595959;
+	border-right:2px solid #FF3700;
+}
+
+.sidebar .menu .leftmenu > li > .submenu > li:hover > a {
+	text-decoration:none;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li:hover > a {
+	text-decoration:none;
+}
+
+.sidebar .menu .leftmenu > li > .submenu-lvl1 > li:hover > .submenu-lvl2 > li:hover a {
+	text-decoration:none;
+}
+
+.sidebar .menu .leftmenu > li > .submenu > li > .submenu {
+	display:none;
+	position:absolute;
+	top:89px;
+	left:360px;
+	background:#484848;
+	min-width:220px;
+}
+
+
+.sidebar {
+	z-index:2;
 }
 
 .sidebar .menu a i.icon_1 {
@@ -3320,4 +3438,58 @@ font-weight:500;
 	width:600px;
 	font-family: 'PT Sans Narrow', sans-serif;
 	font-size:16px;
+}
+
+#home {
+	background:url(../images/bg.jpg) no-repeat 50% 50%;
+	width:100%;
+	height:100%;
+	background-size:cover;
+	position:fixed;
+	margin-left:140px;
+	padding-left:0;
+	
+
+}
+.welcome {
+	width:767px;
+	margin:0 auto;
+	background:#fff;
+	-webkit-box-shadow: 0 0 21px 10px rgba(0,0,0,0.2);
+box-shadow: 0 0 21px 10px rgba(0,0,0,0.2);
+margin-top:60px;
+position:relative;
+left:-70px;
+}
+
+.welcome .bg {
+	background:url(../images/home_bg.jpg) no-repeat 0 0;
+	width:100%;
+	height:152px;
+	border-bottom:8px solid #FF3700;
+}
+
+.welcome .txt {
+	padding:50px;
+	text-align:center;
+}
+
+.welcome .txt h1 {
+	color:#ff3700;
+	font-family: 'Museo Sans Cyrl 700';
+	text-transform:uppercase;
+	font-size:18px;
+}
+.welcome .txt h1 span {
+	color:#333333;
+	font-size:36px;
+	font-family: 'Museo Sans Cyrl 700';
+	display:block;
+	margin-top:10px;
+}
+
+ul.reset {
+	list-style:none;
+	margin-left:0;
+	padding-left:0;
 }
