--- a/CTS_Analytics/Views/Mnemonic/abay.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/abay.cshtml
@@ -71,7 +71,7 @@
 
         <div class="buttons buttons-horz" id="btn_drob-mine5-1">
             <a href='@Url.Action("Alarm", "DashBoard")' title="@Resources.ResourceMnemonic.Libra" class="libra green">@Resources.ResourceMnemonic.Libra</a>
-            <a href='@Url.Action("Alarm", "DashBoard")' title=@Resources.ResourceMnemonic.Direction class="arrow-up green"@Resources.ResourceMnemonic.Arrow/a>
+            <a href='@Url.Action("Alarm", "DashBoard")' title=@Resources.ResourceMnemonic.Direction class="arrow-up green"@Resources.ResourceMnemonic.Arrow></a>
         </div>
 
         <div class="way" id="poroda-mine5">
