--- a/CTS_RoleAdmin/Views/Home/Index.cshtml
+++ b/CTS_RoleAdmin/Views/Home/Index.cshtml
@@ -26,10 +26,10 @@
                     <a href='@Url.Action("MiRoleList")'><i></i>Управление ролями ручного ввода</a>
                 </div>
                 <div class="col-md-6">
-                    <a href='@Url.Action("LocationsRoleList")'><i></i>Управлению ролями местонахождений</a>
+                    <a href='@Url.Action("LocationsRoleList")'><i></i>Управление ролями местонахождений</a>
                 </div>
                 <div class="col-md-6">
-                    <a href='@Url.Action("AnalyticRoleList")'><i></i>Управлению ролями аналитики</a>
+                    <a href='@Url.Action("AnalyticRoleList")'><i></i>Управление ролями аналитики</a>
                 </div>
                 <div class="col-md-6">
                     <a href='@Url.Action("RepoertsRoleList")'><i></i>Управления ролями отчетов</a>
