--- a/CTS_Analytics/Views/Mnemonic/Partials/_Kotel4MineMnemonic.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Partials/_Kotel4MineMnemonic.cshtml
@@ -26,7 +26,7 @@
         <div class="line">
             <span class="name">@Resources.ResourceMnemonic.BoilerConsumptionNorm</span>
             <div class="count">@Model.ConsumptionNorm.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
-            <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
+            <span class="caption">@Resources.ResourceMnemonic.TonnsPerDay</span>
             <div class="clearfix"></div>
         </div>
         <div class="result">
