--- a/CTS_Analytics/Views/Mnemonic/Partials/_Mine4Kotel.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Partials/_Mine4Kotel.cshtml
@@ -12,7 +12,7 @@
             <div class="line">
                 <span class="name">@Resources.ResourceMnemonic.BoilerConsumptionNorm</span>
                 <div class="count">@Model.ConsumptionNorm</div>
-                <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
+                <span class="caption">@Resources.ResourceMnemonic.TonnsPerDay</span>
                 <div class="clearfix"></div>
             </div>
             <div class="line">
