--- a/CTS_Analytics/Views/Shared/_Layout.cshtml
+++ b/CTS_Analytics/Views/Shared/_Layout.cshtml
@@ -27,6 +27,18 @@
     <link href="~/Content/bootstrap-multiselect.css" rel="stylesheet" type="text/css" />
 
 
+    <script type = 'text/javascript' >
+        var appInsights=window.appInsights||function(config)
+        {
+            function r(config){ t[config] = function(){ var i = arguments; t.queue.push(function(){ t[config].apply(t, i)})} }
+            var t = { config:config},u=document,e=window,o='script',s=u.createElement(o),i,f;for(s.src=config.url||'//az416426.vo.msecnd.net/scripts/a/ai.0.js',u.getElementsByTagName(o)[0].parentNode.appendChild(s),t.cookie=u.cookie,t.queue=[],i=['Event','Exception','Metric','PageView','Trace','Ajax'];i.length;)r('track'+i.pop());return r('setAuthenticatedUserContext'),r('clearAuthenticatedUserContext'),config.disableExceptionTracking||(i='onerror',r('_'+i),f=e[i],e[i]=function(config, r, u, e, o) { var s = f && f(config, r, u, e, o); return s !== !0 && t['_' + i](config, r, u, e, o),s}),t
+        }({
+            instrumentationKey:'c7d1f5e1-b91f-4421-956c-28b9d8f193a4'
+        });
+        
+        window.appInsights=appInsights;
+        appInsights.trackPageView();
+    </script>
 </head>
 
 <body>
@@ -136,7 +148,7 @@
         }
         if (CTS_Core.CtsAuthorizeProvider.CheckIsInRole(User.Identity, CTS_Core.Roles.MineSar1RoleName))
         {
-           <li><a href='@Url.Action("sar1", controller)'>@Resources.ResourceMnemonic.Sar1MineName</a></li>
+            <li><a href='@Url.Action("sar1", controller)'>@Resources.ResourceMnemonic.Sar1MineName</a></li>
         }
         if (CTS_Core.CtsAuthorizeProvider.CheckIsInRole(User.Identity, CTS_Core.Roles.MineSar3RoleName))
         {
@@ -169,6 +181,8 @@
 
     @Scripts.Render("~/bundles/analscripts")
     @RenderSection("scripts", required: false)
+    @using StackExchange.Profiling
+    @MiniProfiler.Current.RenderIncludes()
     <script>
             $(function () {
             $('#locations').multiselect({
